# rust-fullstack-app

./: article.md  compose.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
